appId: io.salmonwallet.app
---
- runFlow: ../../../subflows/onboard-walletA.yaml
- runFlow: ../../../subflows/open-settings.yaml
- assertVisible: "Settings"
- swipe:
    direction: UP
    from:
      text: "Developer Networks"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    id: "settings-item-support"
- waitForAnimationToEnd:
    timeout: 3000
- takeScreenshot: screenshots/smoke/settings/help
- runFlow: ../../../subflows/settings-back.yaml
- assertVisible: "Settings"
