appId: io.salmonwallet.app
---
- runFlow: ../../../subflows/onboard-walletA.yaml
- runFlow: ../../../subflows/open-settings.yaml
- assertVisible: "Settings"
- tapOn:
    id: "settings-item-trusted-apps"
- waitForAnimationToEnd:
    timeout: 3000
- takeScreenshot: screenshots/smoke/settings/trusted-apps
- runFlow: ../../../subflows/settings-back.yaml
- assertVisible: "Settings"
